--- a/todo-backend/package.json
+++ b/todo-backend/package.json
@@ -6,9 +6,14 @@
     "cf-typegen": "wrangler types --env-interface CloudflareBindings"
   },
   "dependencies": {
+    "@libsql/client": "^0.15.7",
+    "dotenv": "^16.5.0",
+    "drizzle-orm": "^0.44.0",
     "hono": "^4.7.10"
   },
   "devDependencies": {
+    "drizzle-kit": "^0.31.1",
+    "tsx": "^4.19.4",
     "wrangler": "^4.17.0"
   }
 }
